--- a/survey-form.html
+++ b/survey-form.html
@@ -28,7 +28,7 @@
             <div class="form-group">
                 <label>Which option best describes your current role?</label>
                 <select id="dropdown" class="form-control">
-                    <option> Select Current Role</option>
+                    <option disabled selected value> Select Current Role</option>
                     <option>Student</option>
                     <option>FullTime Job</option>
                 </select>
